API streamlined.